--- a/mentee/templates/menti/login.html
+++ b/mentee/templates/menti/login.html
@@ -12,7 +12,7 @@
       <h1>Login here :</h1>
 <form method="post" action="{% url 'login' %}">
           {% csrf_token %}
-          {# A more "HTML" way of creating the login form#}
+          {# A more "HTML" way of creating the login form#}git
           <label for="username">Username:</label>
           <input type="text" name="username" placeholder="Username">
 <label for="password">Password:</label>
