--- a/mentee/templates/base.html
+++ b/mentee/templates/base.html
@@ -14,7 +14,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
-    <title>Mentorship App</title>
+    <title>Mentor-Mentee Match</title>
   </head>
   <body>
 
