--- a/mentee/templates/home.html
+++ b/mentee/templates/home.html
@@ -8,14 +8,21 @@
 <br><br><br><br>
 
 <div class="jumbotron">
-  <h1 class="display-4">Welcome To The Mentorship App</h1>
-  <p class="lead">This is an online community that connects ambitious entrepreneurs with successful and experienced business leaders. The initiative encourages idea and knowledge sharing among Africa's most promising young entrepreneurs, inspiring a collaborative approach to business start-up and growth.</p>
+  <h1 class="display-4">Welcome To The Mentor-Mentee Match</h1>
+  <p class="lead">This is an online community that connects beginners in tech with industry tech leaders.
+      The initiative encourages young women and men an opportunity to connect, network and be inspired by tech leaders,
+      inspiring a generation tech-savvy youth.</p>
   <hr class="my-4">
     <p><b>Sign Up For Mentorship</b></p>
   <a class="btn btn-primary btn-lg" href="{% url 'register' %}" role="button">Click Here</a><br><br>
     <hr>
       <p><b>Sign Up To Be A mentor</b></p>
     <a class="btn btn-primary btn-lg" href="{% url 'register1' %}" role="button">Click Here</a>
+
+<hr class="my-4 text-center">
+{#    <p><b>About Mentor-Mentee Match</b></p>#}
+  <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">About Us</a><br><br>
+    <hr>
 </div>
 
 
