--- a/mentee/templates/home.html
+++ b/mentee/templates/home.html
@@ -6,6 +6,7 @@
 {% block content %}
 
 <br><br><br><br>
+    <header class="main-header" id="header">
 
 <div class="jumbotron">
   <h1 class="display-4">Welcome To The Mentor-Mentee Match</h1>
@@ -25,6 +26,6 @@
     <hr>
 </div>
 
-
+    </header>
 
 {% endblock %}
