--- a/mentee/templates/menti/about.html
+++ b/mentee/templates/menti/about.html
@@ -9,6 +9,12 @@
   <!--header-->
   <header class="main-header" id="header">
     <div class="bg-color">
+{#        Image addition#}
+    <div class="header-image">
+    <img src="{% static 'img/banner.jpg'%}" alt="Header Image">
+    </div>
+
+
       <!--nav-->
       <nav class="nav navbar-default navbar-fixed-top">
         <div class="container">
@@ -17,7 +23,7 @@
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
                             <span class="fa fa-bars"></span>
                         </button>
-              <a href="index.html" class="navbar-brand">Mentor-Mentee Match</a>
+              <a href="home.html" class="navbar-brand">Mentor-Mentee Match</a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="mynavbar">
               <ul class="nav navbar-nav">
@@ -108,10 +114,24 @@
           <p>If you have any questions or need more information, feel free to reach out to us. We're here to help you on your mentoring journey.</p>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+{#        <!-- Footer -->#}
+{#        <footer id="contact" class="footer-padding">#}
+{#            <div class="container text-center">#}
+{#                <div class="row">#}
+{#                    <div class="col-md-12">#}
+{#                        <h2 class="head-title">Contact Us</h2>#}
+{#                        <hr class="botm-line">#}
+{#        <p>If you have any questions or need more information,#}
+{#            feel free to reach out to us. We're here to help you on your mentoring journey.</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </footer>#}
+    </body>
+
   <!---->
-</body>
 
 {#    <div class="container">#}
 {#        <div class="jumbotron">#}
