--- a/mentee/templates/menti/base.html
+++ b/mentee/templates/menti/base.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <title>Mentorship App</title>
   </head>
