--- a/mentee/static/css/style.css
+++ b/mentee/static/css/style.css
@@ -137,6 +137,49 @@ p {
   margin: 20px auto;
 }
 
+/* How It Works Section */
+.section-padding {
+  padding: 60px 0;
+}
+
+.section-title h2 {
+  color: #007bff;
+}
+
+.section-title hr.botm-line {
+  width: 50px;
+  height: 3px;
+  background-color: #007bff;
+  margin: 20px auto;
+}
+
+.icon {
+  font-size: 2.5rem;
+  color: #007bff;
+  margin-bottom: 10px;
+}
+
+.icon-text {
+  text-align: left;
+}
+
+.icon-text h3 {
+  color: #333;
+  font-size: 1.25rem;
+}
+
+.icon-text p {
+  color: #777;
+  font-size: 1rem;
+}
+
+
+
+
+
+
+
+
 /* Testimonials */
 #testimonials p {
   font-style: italic;
