--- a/mentee/templates/base.html
+++ b/mentee/templates/base.html
@@ -19,7 +19,7 @@
   <body>
 
   <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
         <div class="container">
           <a class="navbar-brand mr-4" href="">Mentorship App</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +38,9 @@
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                 <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-item nav-link" href="{% url 'home' %}">Sign Up</a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
 
 
               {% endif %}
